<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFBFC"
    tools:context=".ForgetPassword"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView_ForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_your_email"
        android:textAlignment="center"
        android:ems="10"
        android:textColor="#515151"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@drawable/btn_rounded_corner"
        android:textSize="20sp"/>

</LinearLayout>