<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFBFC"
    android:padding="20dp">
    <!--    <include layout="@layout/activity_toolbar" />-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="900dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textViewAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="145dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/beautytips1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/create_new_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="500dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/edit_text_bg"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221"
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="500dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="175dp"
            android:autofillHints="no"
            android:background="@drawable/edit_text_bg"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.323" />

        <TextView
            android:id="@+id/textViewAddress24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="295dp"
            android:text="@string/email"
            android:textColor="#222523"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="500dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="325dp"
            android:background="@drawable/edit_text_bg"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002" />


        <TextView
            android:id="@+id/textViewAddress28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edittext_phonenumber"
            android:layout_width="500dp"
            android:layout_height="35dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/edit_text_bg"
            android:importantForAutofill="no"
            android:inputType="phone|number"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />

        <TextView
            android:id="@+id/textViewAddress26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="370dp"
            android:text="@string/password1"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="500dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="400dp"
            android:background="@drawable/edit_text_bg"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword" />

        <TextView
            android:id="@+id/textViewAddress27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="445dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edittext_confirmpassword"
            android:layout_width="500dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="475dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/edit_text_bg"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/button_register"
            android:layout_width="530dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="530dp"
            android:background="@drawable/btn_rounded_corner"
            android:onClick="Register"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView

            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="590dp"
            android:text="@string/you_have_an_account"
            android:textColor="#222523"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949" />

        <Button
            android:id="@+id/textview_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="620dp"
            android:background="@drawable/btn_rounded_corner"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />




    </RelativeLayout>
</ScrollView>
