<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    android:background="#FAFBFC"
    android:layout_height="match_parent"
    android:padding="20dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:background="#FAFBFC"
        tools:context=".MainActivity">


        <ImageView
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/project_management">

        </ImageView>

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="340dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="415dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="500dp"
            android:background="@drawable/btn_rounded_corner"
            android:onClick="Login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/textViewAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:text="@string/email"
            android:textColor="#222523"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewAddress3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:text="@string/password"
            android:textColor="#222523"
            android:textSize="18sp" />

        <TextView

            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="535dp"

            android:textColor="#222523"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.392"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.873" />

        <TextView
            android:id="@+id/textViewAddress22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="385dp"
            android:textColor="#222523"
            android:textSize="18sp" />

        <Button
            android:id="@+id/textview_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="560dp"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/textview_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="460dp"
            android:paddingStart="110dp"
            android:text="@string/forget_password"
            android:textColor="#222523"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.646"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.873"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-100dp"
            android:contentDescription="@string/logo">
        </ImageView>


    </RelativeLayout>
</ScrollView>

